--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Test</title>
+    <title>My First Website</title>
   </head>
   <body>
     <h1>Hello World!</h1>
     <p>Welcome to my awesome website!</p>
+    <a href="about.html">About Me</a>
   </body>
 </html>
