--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Hello World!</h1>
     <p>Welcome to my awesome website!</p>
-    <a href="about.html">About Me</a>
+    <a href="about.html">About Me</a> | <a href="contact.html">Contact Me</a>
   </body>
 </html>
