--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                         </audio>
                     </div>
                     <div class="col-lg-4">
-                        <h4><span style="color: #f0f0f0;">Mio</span></h4>
+                        <h4><span style="color: #f0f0f0;">Lofi</span></h4>
                         <div class="portfolio-caption-subheading text-muted">Mio</div>
                         <audio controls>
                             <source src="assets/audio/Mio.mp3" type="audio/mp3">
