--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Experienced Music Design</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family, I know how to make active and great soundtracks in different themes. Whether it's horror, atmospheric, lofi, or even a remix of a meme—I've got you covered.</span></p>
+                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family I now know how to make active and great soundtracks, some different themes than others, all music is made original without/with very few samples, I am capable of making any type of music that you request, whether it be horror, atmospheric, lofi, calming, active, intense, or a remix of a meme, I've got you.</span></p>
                 <div class="row-music">
                     <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
@@ -698,7 +698,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Not-so Professional 3D Models</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">3D modeling isn't exactly my bread and butter, but I sure do enjoy messing around with it. I'm more of a "pretty good" level than a professional one, but I've made some pretty cool stuff over the years. Whether it's props for games or characters, I've got a solid handle on creating 3D models. </span></p>
+                <p><span style="color: #f0f0f0;">3D modeling isn't exactly my bread and butter, but I sure do enjoy messing around with it. I'm more of a "pretty good" level than a professional one, but I've made some pretty cool stuff over the years. Whether it's props for games or characters, I've got a solid handle on creating 3D models.</span></p>
                 <p><span style="color: #f0f0f0;"></span></p>
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
