--- a/games.html
+++ b/games.html
@@ -7,15 +7,11 @@
      <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio</title>
         <link rel="icon" href="assets/Ducc2D.png" />
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
@@ -35,17 +31,14 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
         <header class="masthead">
             <div class="masthead-content">
-                <div id="particles-js"></div>
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Games</span></div>
                     <div class="masthead-subheading"><span style="color: #f0f0f0;">Or experiences... whatever you wanna call them</span></div>
                 </div>
             </div>
         </header>  
-    <!-- Content Section -->
     <section class="page-section" id="games" style="background-color: #111111; color: #f0f0f0;">
         <div class="container">
             <div class="text-center">
@@ -55,7 +48,6 @@
                 <p>Unlike other portfolios, I show my failed work here, I'm not afraid to share what I tried to do and failed at.</p>
             </div>
             <div id="game-list" class="row">
-                <!-- Games will be populated here via JavaScript -->
             </div>
         </div>
     </section>
@@ -68,9 +60,8 @@
             </div>
         </div>
     </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script async src="js/scripts.js" defer></script>
 </body>
 </html>
