--- a/why-hire-me.html
+++ b/why-hire-me.html
@@ -7,15 +7,11 @@
      <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio</title>
         <link rel="icon" href="assets/Ducc2D.png" />
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
-        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
@@ -35,17 +31,14 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
         <header class="masthead">
             <div class="masthead-content">
-                <div id="particles-js"></div>
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Why You Should Hire Me</span></div>
                     <div class="masthead-subheading"><span style="color: #f0f0f0;">Why? I've got a few reasons</span></div>
                 </div>
             </div>
         </header>  
-        <!-- Why Hire Me Section-->
         <section class="page-section" id="why-hire-me" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center">
@@ -93,7 +86,6 @@
         </section>
         <div class="divider"></div>
         <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
-        <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -101,9 +93,8 @@
                 </div>
             </div>
         </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
+        <script async src="js/scripts.js" defer></script>
     </body>
 </html>
