--- a/games.html
+++ b/games.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="assets/Ducc2D.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <script src="js/scripts.js"></script>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -62,6 +63,5 @@
     </footer>
     <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script async src="js/scripts.js" defer></script>
 </body>
 </html>
