--- a/testimonials.html
+++ b/testimonials.html
@@ -127,6 +127,6 @@
         </footer>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
