--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!--
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
                                     <img class="img-fluid" src="assets/img/gifs/Toxic Collossus Crawl.webp" alt="Toxic Collossus Crawl" loading="lazy">
@@ -91,6 +92,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
                                     <img class="img-fluid" src="assets/img/gifs/Toxic Collossus Idle.webp" alt="Toxic Collossus Idle" loading="lazy">
@@ -99,6 +101,7 @@
                                     </div>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -391,7 +394,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Experienced Music Design</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family I now know how to make active and great soundtracks, some different themes than others, all music is made original without/with very few samples, I am capable of making any type of music that you request, whether it be horror, atmospheric, lofi, calming, active, intense, or a remix of a meme, I've got you.</span></p>
+                <p><span style="color: #f0f0f0;">With the help of Bandlab, FL Studio, friends, and family I now know how to make active and great soundtracks, some different themes than others, all music is made as original as possible, I am capable of making most types of music that you request, whether it be horror, atmospheric, lofi, calming, active, intense, or a remix of a meme, I've got you.</span></p>
                 <div class="row-music">
                     <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">Atmospheric</span></h4>
