--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Enigma Elevator Shaft.png" alt="Enigma Elevator Shaft" loading="lazy"/>
@@ -279,6 +280,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Quantum Decay Main Menu.png" alt="Quantum Decay Main Menu" loading="lazy"/>
@@ -346,6 +348,15 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
+                            <img class="img-fluid" src="assets/img/portfolio/Noob Attack Castle.png" alt="Tower Defense Concept" loading="lazy"/>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Tower Defense Concept</div>
+                                <div class="portfolio-caption-subheading text-muted">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/The Basement Loot Room.png" alt="The Basement Loot Room" loading="lazy"/>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">The Basement Loot Room</div>
@@ -377,15 +388,6 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">After Hours</div>
                                 <div class="portfolio-caption-subheading text-muted">Abandoned 2020</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                        <div class="portfolio-item">
-                            <img class="img-fluid" src="assets/img/portfolio/Noob Attack Castle.png" alt="Noob Attack Castle" loading="lazy"/>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Noob Attack Castle</div>
-                                <div class="portfolio-caption-subheading text-muted">2019</div>
                             </div>
                         </div>
                     </div>
