--- a/games.html
+++ b/games.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead">
+        <header class="masthead fade-in">
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Games</span></div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </header>  
-    <section class="page-section" id="games" style="background-color: #111111; color: #f0f0f0;">
+    <section class="page-section fade-in" id="games" style="background-color: #111111; color: #f0f0f0;">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Game Development Journey</span></h2>
@@ -53,7 +53,7 @@
         </div>
     </section>
     <div class="divider"></div>
-    <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
+    <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase fade-in"><span style="color: #5000e6;"></span>Scroll to Top</button>
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
