--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead">
+        <header class="masthead fade-in">
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Hi, I'm Fancy Ducc</span></div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </header>        
-        <section class="page-section" id="animation" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section fade-in" id="animation" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center" data-aos="fade-up" data-aos-duration="800">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Professional Animations</span></h2>
@@ -83,7 +83,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
                                     <img class="img-fluid" src="assets/img/gifs/Toxic Collossus Crawl.webp" alt="Toxic Collossus Crawl" loading="lazy">
@@ -101,7 +100,6 @@
                                     </div>
                                 </div>
                             </div>
-                            -->
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -117,7 +115,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <section class="page-section" id="scripting" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section fade-in" id="scripting" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center" data-aos="fade-up" data-aos-duration="800">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Professional Scripting</span></h2>
@@ -138,7 +136,6 @@
                             </div>
                         </div>                        
                     </div>
-                    <!--
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/gifs/Custom Rendering Engine.gif" alt="Custom Rendering Engine" loading="lazy">
@@ -147,7 +144,6 @@
                             </div>
                         </div>                        
                     </div>
-                    -->
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/gifs/Generative Obby AI.webp" alt="Generative Obby AI" loading="lazy">
@@ -168,7 +164,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <section class="page-section" id="building" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section fade-in" id="building" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center" data-aos="fade-up" data-aos-duration="800">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Professional Buildings and Landscaping</span></h2>
@@ -241,7 +237,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Enigma Doorway.png" alt="Enigma Doorway 1" loading="lazy"/>
@@ -278,7 +273,6 @@
                             </div>
                         </div>
                     </div>
-                    -->
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Quantum Decay Main Menu.png" alt="Quantum Decay Main Menu" loading="lazy"/>
@@ -299,7 +293,6 @@
                             </div>
                         </div>                                             
                     </div>
-                    <!---
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Quantum Decay Hallway.png" alt="Quantum Decay Hallway" loading="lazy"/>
@@ -309,7 +302,6 @@
                             </div>
                         </div>
                     </div>
-                    -->
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
                             <img class="img-fluid" src="assets/img/portfolio/Analysis Living Room.png" alt="Analysis Living Room" loading="lazy"/>
@@ -395,7 +387,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <section class="page-section" id="music" style="background-color: #111111; color: #1a1a1a;">
+        <section class="page-section fade-in" id="music" style="background-color: #111111; color: #1a1a1a;">
             <div class="container" style="padding-right: 5px; padding-left: 5px;">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Experienced Music Design</span></h2>
@@ -658,7 +650,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <section class="page-section" id="models" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section fade-in" id="models" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Not-so Professional 3D Models</span></h2>
@@ -696,7 +688,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <section class="page-section" id="contact" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section fade-in" id="contact" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Contact Me</span></h2>
@@ -721,7 +713,7 @@
         </section>
 
         <div class="divider"></div>
-        <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
+        <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase fade-in"><span style="color: #5000e6;"></span>Scroll to Top</button>
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
@@ -731,7 +723,7 @@
         </footer>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>
+        <script src="js/scripts.js"></script>
         <script>
             VanillaTilt.init(document.querySelectorAll(".portfolio-item"), {
                 max: 10,
