Fixed videos and did stuff

--- a/payments.html
+++ b/payments.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Fancy Ducc Portfolio - Game Development, Animation, Music, and more." />
-     <meta name="author" content="Fancy Ducc" />
+        <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio</title>
         <link rel="icon" href="assets/Ducc2D.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -44,17 +44,135 @@
             <div class="text-center" data-aos="fade-up" data-aos-duration="800">
                 <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Payment Information</span></h2>
             </div>
+            <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Understanding that everyone is unique, and every project comes with its own set of requirements, I try to provide flexibility when it comes to payment methods. Whether you are an independent creator on a budget or a well-established team, rest assured that I've got a payment method that suits you. You can pay for my services through a variety of methods, including Robux, group funds on Roblox, USD, or Cashapp. My goal is to make the payment process as seamless and convenient as possible for you, so you can focus more on the creative aspect of your game and less on the logistics.</span></p>
+            <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Prices must be paid 5% when I begin working, 35% half way done with my contribution, and the last 60% after I am done working for your project, this is to make sure that I get paid fairly for the work I do.</span></p>
+            <div id="discount-card" class="card discount-card" style="background-color: #222222; color: #f0f0f0; padding: 1rem; margin-bottom: 1rem;">
+                <h3 style="color: #ff3e3e;">Portfolio Release Discount</h3>
+                <ul id="discounted-services-list" style="color: #f0f0f0;">
+                </ul>
+                <p>Discounts are applied when you hire me, which means even if the discount ends during whatever you hired me for, you will still get the discounted rate for the entire duration of our work together.</p>
+            </div>            
             <div class="row">
-                <div class="col-lg-12">
-                    <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Understanding that everyone is unique, and every project comes with its own set of requirements, I try to provide flexibility when it comes to payment methods. Whether you are an independent creator on a budget or a well-established organization, rest assured that I've got a payment method that suits you. You can pay for my services through a variety of methods, including Robux, group funds on Roblox, USD, or Cashapp. My goal is to make the payment process as seamless and convenient as possible for you, so you can focus more on the creative aspect of your game and less on the logistics.</span></p>
-                    <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">I do not provide a list of payments on this page as everyone is different and I am willing to adjust how much I receive based off of the success of the game, how much I do, and anything you may request of me, you pay what you think I deserve, no questions asked.</span></p>
-                    <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Currently, I am very generous with helping others and their games, so if I come to you in ANY social media (Discord, Instagram, Roblox, email, etc.) then payments are out of the picture as I am solely asking to be a part of game development for learning, interest, helping out, and of course, fun!</span></p>
-                    <p style="margin-bottom: 2rem;"><span style="color: #5000e6;"><strong>The list of games I am currently offering free services for are as follows:</strong></span></p>
-                    <ul id="free-services-list" style="color: #5000e6; font-weight: bold;">
+                <div class="col-lg-6 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #5000e6;">Building</h4>
+                        <p>Starting at: <strong class="price usd" data-original-price="5">$5/hr</strong> or <strong class="price robux" data-original-price="5">400 Robux/hr</strong>
+                        </p>                        
+                        <p>Custom environment builds including terrains, structures, and props:</p>
+                        <ul>
+                            <li>Simple Builds (e.g. small props, basic structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/hr</strong></li>
+                            <li>Complex Builds (e.g. large terrains, intricate structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/hr</strong></li>
+                            <li>Group Projects or Collaborations: Custom rates based on scope and team size, please contact me.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #5000e6;">Scripting (Luau, HTML, JavaScript, Python)</h4>
+                        <p>Starting at: <strong class="price usd" data-original-price="4">$4/script</strong> or <strong class="price robux" data-original-price="4">320 Robux/script</strong>
+                        <p>Detailed scripting services:</p>
+                        <ul>
+                            <li>Basic Scripts (ex; GUI interactions, simple mechanics): <strong style="color: #f0f0f0;" class="price usd" data-original-price="4">$4/script</strong></li>
+                            <li>Advanced Scripts (ex; AI systems, movement systems): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/script</strong></li>
+                            <li>Modular Systems (ex; melee system, ): <strong style="color: #f0f0f0;" class="price usd" data-original-price="18">$18/script</strong></li>
+                            <li>Backend Services & Integrations (ex; DataStore, Web API): <strong style="color: #f0f0f0;" class="price usd" data-original-price="13">$13/script</strong></li>
+                            <li><strong>Languages (ex; html website, python app):</strong>
+                                <ul>
+                                    <li>HTML: <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/script</strong></li>
+                                    <li>Javascript: <strong style="color: #f0f0f0;" class="price usd" data-original-price="9">$9/script</strong></li>
+                                    <li>Python: <strong style="color: #f0f0f0;" class="price usd" data-original-price="11">$11/script</strong></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #5000e6;">Animation (Blender, Moon Animator, Roblox Animation Editor)</h4>
+                        <p>Starting at: <strong class="price usd" data-original-price="8">$8/asset</strong> or <strong class="price robux" data-original-price="8">640 Robux/asset</strong></p>
+                        <p>Prices vary based on tools and rig complexity:</p>
+                        <ul>
+                            <li><strong>Blender Animation:</strong>
+                                <ul>
+                                    <li>Basic Animation (ex; idle, walk cycle): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/hr</strong></li>
+                                    <li>Advanced Animation (ex; fight scenes, cutscenes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="20">$20/hr</strong></li>
+                                    <li>Rigging (adding bones to a custom model):<strong>Adding</strong> <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/hr</strong></li>
+                                </ul>
+                            </li>
+                            <li><strong>Moon Animator (Roblox):</strong>
+                                <ul>
+                                    <li>Character Animation (ex; basic movement): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/hr</strong></li>
+                                    <li>Cutscene with Camera (including transitions): <strong style="color: #f0f0f0;" class="price usd" data-original-price="15">$15/hr</strong></li>
+                                </ul>
+                            </li>
+                            <li><strong>Roblox Animation Editor:</strong>
+                                <ul>
+                                    <li>R6 Rig (ex; walk loop): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/hr</strong></li>
+                                    <li>R15 Rig (more complex due to joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/hr</strong></li>
+                                    <li>Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/hr</strong></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #5000e6;">Music Design (All Genres)</h4>
+                        <p>Starting at: <strong class="price usd" data-original-price="3">$3/asset</strong> or <strong class="price robux" data-original-price="3">240 Robux/track</strong></p>
+                        <p>Custom music creation tailored to your project needs:</p>
+                        <ul>
+                            <li><strong>Basic Tracks:</strong>
+                                <ul>
+                                    <li>Loopable Background Music (simple ambient or lofi): <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/track</strong></li>
+                                    <li>Short Theme (ex; menu or level music, < 1 minute): <strong style="color: #f0f0f0;" class="price usd" data-original-price="3">$3/track</strong></li>
+                                </ul>
+                            </li>
+                            <li><strong>Advanced Tracks:</strong>
+                                <ul>
+                                    <li>Thematic Soundtrack (2-4 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="9">$9/track</strong></li>
+                                    <li>Extended Soundtrack (4-8 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="15">$15/track</strong></li>
+                                </ul>
+                            </li>
+                            <li><strong>Customization and Special Features:</strong>
+                                <ul>
+                                    <li>Genre Blending (ex; horror + lofi, electronic + classical): <strong>Adding</strong> <strong style="color: #f0f0f0;" class="price usd" data-original-price="4">$4/track</strong></li>
+                                    <li>Iteration Music (ex; music that changes speed when something happens in-game): <strong>Adding</strong> <strong style="color: #f0f0f0;" class="price usd" data-original-price="6">$6/track</strong></li>
+                                </ul>
+                            </li>
+                            <li><strong>Bulk Projects:</strong>
+                                <ul>
+                                    <li>Multiple Tracks for a Single Game (3 or more tracks): Bulk discounts available, please contact me to get prices for what you need in bulk.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #5000e6;">3D Modeling (Props)</h4>
+                        <p>Starting at: 
+                            <strong class="price usd" data-original-price="5">$5/hr</strong> 
+                            or 
+                            <strong class="price robux" data-original-price="5">400 Robux/hr</strong>
+                        </p>                        
+                        <p>Simple, effective models for game assets, these are limited as I am not completely professional at 3D Modeling:</p>
+                        <ul>
+                            <li>Basic Props (e.g. furniture, small items): <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/asset</strong></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="col-lg-12 mb-4">
+                <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                    <h4 style="color: #ff3e3e;">Free Services</h4>
+                    <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I am offering services for free as it could be purely for learning, helping others, and of course having fun.</p>
+                    <p>Currently, I'm offering free services for the following games:</p>
+                    <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
                         <li>The Skinwalker (By Otrix and Zaku)</li>
                         <li>BIO-HAZARD (By The Conglomerate of Anomalous Activity/Ark Hannold)</li>
                     </ul>
-                    <p style="margin-bottom: 2rem;"><span style="color: #a1a1a1;"><span style="font-size: 0.9em; color: #f0f0f0;">Apart from unable to pay fully, you can also allow me special permissions to the game if/when the game gets published. (In-game tag above head, commands, discounted/free gamepass/es, etc)</span></p>
                 </div>
             </div>
         </div>
@@ -71,5 +189,6 @@
     <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script src="js/scripts.js"></script>
+    <script src="js/discounts.js"></script>
 </body>
 </html>
