--- a/why-hire-me.html
+++ b/why-hire-me.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead fade-in">
+        <header class="masthead">
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Why You Should Hire Me</span></div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </header>  
-        <section class="page-section fade-in" id="why-hire-me" style="background-color: #111111; color: #f0f0f0;">
+        <section class="page-section" id="why-hire-me" style="background-color: #111111; color: #f0f0f0;">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Reasons to Hire Me</span></h2>
@@ -85,7 +85,7 @@
             </div>
         </section>
         <div class="divider"></div>
-        <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase fade-in"><span style="color: #5000e6;"></span>Scroll to Top</button>
+        <button id="scrollToTopBtn" class="btn btn-primary btn-xl text-uppercase"><span style="color: #5000e6;"></span>Scroll to Top</button>
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
