--- a/payments.html
+++ b/payments.html
@@ -46,6 +46,7 @@
             </div>
             <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Understanding that everyone is unique, and every project comes with its own set of requirements, I try to provide flexibility when it comes to payment methods. Whether you are an independent creator on a budget or a well-established team, rest assured that I've got a payment method that suits you. You can pay for my services through a variety of methods, including Robux, group funds on Roblox, USD, or Cashapp. My goal is to make the payment process as seamless and convenient as possible for you, so you can focus more on the creative aspect of your game and less on the logistics.</span></p>
             <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">Prices must be paid 5% when I begin working, 35% half way done with my contribution, and the last 60% after I am done working for your project, this is to make sure that I get paid fairly for the work I do.</span></p>
+            <p style="margin-bottom: 2rem;"><span style="color: #f0f0f0;">None of these prices are final, everything may or may not be adjusted to match the amount of work spent, how complex the work is, how long it takes me to complete the work, and how many features/details you request. I will not go above what you request so that you can rely on a budget.</span></p>
             <div id="discount-card" class="card discount-card" style="background-color: #222222; color: #f0f0f0; padding: 1rem; margin-bottom: 1rem;">
                 <h3 style="color: #ff3e3e;">Portfolio Release Discount</h3>
                 <ul id="discounted-services-list" style="color: #f0f0f0;">
@@ -56,12 +57,13 @@
                 <div class="col-lg-6 mb-4">
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">Building</h4>
-                        <p>Starting at: <strong class="price usd" data-original-price="5">$5/hr</strong> or <strong class="price robux" data-original-price="5">400 Robux/hr</strong>
+                        <p>Starting at: <strong class="price usd" data-original-price="8">$8/build</strong> or <strong class="price robux" data-original-price="8">400 Robux/build</strong>
                         </p>                        
                         <p>Custom environment builds including terrains, structures, and props:</p>
                         <ul>
-                            <li>Simple Builds (e.g. small props, basic structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/hr</strong></li>
-                            <li>Complex Builds (e.g. large terrains, intricate structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/hr</strong></li>
+                            <li>Simple Builds (e.g. small props, basic structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/build</strong></li>
+                            <li>Complex Builds (e.g. terrains, structures, interiors): <strong style="color: #f0f0f0;" class="price usd" data-original-price="14">$14/build</strong></li>
+                            <li>Really Complex Builds (e.g. large builds, realistic terrain, exteriors & interiors): <strong style="color: #f0f0f0;" class="price usd" data-original-price="20">$20/build</strong></li>
                             <li>Group Projects or Collaborations: Custom rates based on scope and team size, please contact me.</li>
                         </ul>
                     </div>
@@ -73,14 +75,14 @@
                         <p>Detailed scripting services:</p>
                         <ul>
                             <li>Basic Scripts (ex; GUI interactions, simple mechanics): <strong style="color: #f0f0f0;" class="price usd" data-original-price="4">$4/script</strong></li>
-                            <li>Advanced Scripts (ex; AI systems, movement systems): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/script</strong></li>
+                            <li>Advanced Scripts (ex; AI systems, movement systems): <strong style="color: #f0f0f0;" class="price usd" data-original-price="13">$13/script</strong></li>
                             <li>Modular Systems (ex; melee system, ): <strong style="color: #f0f0f0;" class="price usd" data-original-price="18">$18/script</strong></li>
                             <li>Backend Services & Integrations (ex; DataStore, Web API): <strong style="color: #f0f0f0;" class="price usd" data-original-price="13">$13/script</strong></li>
                             <li><strong>Languages (ex; html website, python app):</strong>
                                 <ul>
-                                    <li>HTML: <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/script</strong></li>
-                                    <li>Javascript: <strong style="color: #f0f0f0;" class="price usd" data-original-price="9">$9/script</strong></li>
-                                    <li>Python: <strong style="color: #f0f0f0;" class="price usd" data-original-price="11">$11/script</strong></li>
+                                    <li>HTML: <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/script</strong></li>
+                                    <li>Javascript: <strong style="color: #f0f0f0;" class="price usd" data-original-price="11">$11/script</strong></li>
+                                    <li>Python: <strong style="color: #f0f0f0;" class="price usd" data-original-price="13">$13/script</strong></li>
                                 </ul>
                             </li>
                         </ul>
@@ -89,27 +91,28 @@
                 <div class="col-lg-6 mb-4">
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">Animation (Blender, Moon Animator, Roblox Animation Editor)</h4>
-                        <p>Starting at: <strong class="price usd" data-original-price="8">$8/asset</strong> or <strong class="price robux" data-original-price="8">640 Robux/asset</strong></p>
+                        <p>Starting at: <strong class="price usd" data-original-price="8">$8/animation</strong> or <strong class="price robux" data-original-price="8">640 Robux/animation</strong></p>
                         <p>Prices vary based on tools and rig complexity:</p>
                         <ul>
                             <li><strong>Blender Animation:</strong>
                                 <ul>
-                                    <li>Basic Animation (ex; idle, walk cycle): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/hr</strong></li>
-                                    <li>Advanced Animation (ex; fight scenes, cutscenes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="20">$20/hr</strong></li>
-                                    <li>Rigging (adding bones to a custom model):<strong>Adding</strong> <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/hr</strong></li>
+                                    <li>Basic Animation (ex; idle, walk cycle): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/animation</strong></li>
+                                    <li>Advanced Animation (ex; fight scenes, cutscenes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="25">$25/animation</strong></li>
+                                    <li>Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$14/animation</strong></li>
+                                    <li>Rigging (adding bones to a custom model):<strong>Adding</strong> <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/animation</strong></li>
                                 </ul>
                             </li>
                             <li><strong>Moon Animator (Roblox):</strong>
                                 <ul>
-                                    <li>Character Animation (ex; basic movement): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/hr</strong></li>
-                                    <li>Cutscene with Camera (including transitions): <strong style="color: #f0f0f0;" class="price usd" data-original-price="15">$15/hr</strong></li>
+                                    <li>Character Animation (ex; basic movement): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/animation</strong></li>
+                                    <li>Cutscene/s with Camera: <strong style="color: #f0f0f0;" class="price usd" data-original-price="19">$19/animation</strong></li>
                                 </ul>
                             </li>
                             <li><strong>Roblox Animation Editor:</strong>
                                 <ul>
-                                    <li>R6 Rig (ex; walk loop): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/hr</strong></li>
-                                    <li>R15 Rig (more complex due to joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/hr</strong></li>
-                                    <li>Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/hr</strong></li>
+                                    <li>R6 Rig (ex; walk loop): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/animation</strong></li>
+                                    <li>R15 Rig (more complex due to joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="12">$12/animation</strong></li>
+                                    <li>Custom Rig (with multiple bones and joints): <strong style="color: #f0f0f0;" class="price usd" data-original-price="18">$18/animation</strong></li>
                                 </ul>
                             </li>
                         </ul>
