Portfolio Release Discount

--- a/payments.html
+++ b/payments.html
@@ -154,9 +154,9 @@
                     <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                         <h4 style="color: #5000e6;">3D Modeling (Props)</h4>
                         <p>Starting at: 
-                            <strong class="price usd" data-original-price="5">$5/hr</strong> 
+                            <strong class="price usd" data-original-price="5">$5/asset</strong> 
                             or 
-                            <strong class="price robux" data-original-price="5">400 Robux/hr</strong>
+                            <strong class="price robux" data-original-price="5">400 Robux/asset</strong>
                         </p>                        
                         <p>Simple, effective models for game assets, these are limited as I am not completely professional at 3D Modeling:</p>
                         <ul>
