removed gifs cause they break ios

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <link rel="icon" href="assets/Ducc2D.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <link href="css/styles.css" rel="stylesheet" media="print" onload="this.media='all';">
-        <link href="css/lightbox.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
     </head>
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -271,11 +270,12 @@
                     <p><span style="color: #f0f0f0;">In the world of animation, bringing characters and scenes to life is my specialty. With over 9 years of hands-on experience, I've mastered the art of making characters move. From walk cycles to action-packed cutscenes, my animations aim to immerse everyone at every turn.</span></p>
                 </div>
                 <div class="row">
+                    <!--
                     <div class="col-lg-6">
                         <div class="row">
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Searching Drawers.gif" alt="Searching Drawers" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Searching Drawers.gif" alt="Searching Drawers" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Searching Drawers</div>
                                     </div>
@@ -283,7 +283,7 @@
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Simple Walk Loop.gif" alt="Simple Walk Loop" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Simple Walk Loop.gif" alt="Simple Walk Loop" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Simple Walk Loop</div>
                                     </div>
@@ -291,7 +291,7 @@
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Crawler Enter.gif" alt="Crawler Enter" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Crawler Enter.gif" alt="Crawler Enter" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Crawler Enter Vent</div>
                                     </div>
@@ -299,7 +299,7 @@
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Crawler Exit.gif" alt="Crawler Exit" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Crawler Exit.gif" alt="Crawler Exit" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Crawler Exit Vent</div>
                                     </div>
@@ -307,7 +307,7 @@
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Toxic Collossus Crawl.webp" alt="Toxic Collossus Crawl" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Toxic Collossus Crawl.webp" alt="Toxic Collossus Crawl" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Toxic Collossus Crawl</div>
                                     </div>
@@ -316,7 +316,7 @@
                             
                             <div class="col-md-6 mb-4">
                                 <div class="portfolio-item">
-                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Toxic Collossus Idle.webp" alt="Toxic Collossus Idle" loading="lazy">
+                                    <img class="img-fluid portfolio-image" src="assets/img/gifs/Toxic Collossus Idle.webp" alt="Toxic Collossus Idle" loading="lazy" rel="preload">
                                     <div class="portfolio-caption">
                                         <div class="portfolio-caption-heading">Toxic Collossus Idle</div>
                                     </div>
@@ -324,6 +324,15 @@
                             </div>
                         </div>
                     </div>
+                    -->
+                    <div class="col-md-6 mb-6">
+                        <div class="portfolio-item">
+                            <div class="col-lg-12">
+                                <p><span style="color: #f0f0f0;">This page section has been temporarily removed until I figure out why the gifs are causing iOS to crash, sorry :/</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="col-lg-6">
                         <div class="portfolio-item">
                             <p><span style="color: #f0f0f0;"><strong>I created a cutscene not a long time ago, but I don't know what to put here if I remove this section, so it stays :p.</strong></span></p>
@@ -350,9 +359,10 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!--
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Collision Particles Loop.gif" alt="Collidable Particles Loop" loading="lazy">
+                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Collision Particles Loop.gif" alt="Collidable Particles Loop" loading="lazy" rel="preload">
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Collidable Particles</div>
                             </div>
@@ -360,7 +370,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Custom Rendering Engine.gif" alt="Custom Rendering Engine" loading="lazy">
+                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Custom Rendering Engine.gif" alt="Custom Rendering Engine" loading="lazy" rel="preload">
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Custom Rendering Engine</div>
                             </div>
@@ -368,7 +378,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Generative Obby AI.webp" alt="Generative Obby AI" loading="lazy">
+                            <img class="img-fluid portfolio-image" src="assets/img/gifs/Generative Obby AI.webp" alt="Generative Obby AI" loading="lazy" rel="preload">
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Generative Obby AI</div>
                             </div>
@@ -381,7 +391,15 @@
                                 <div class="portfolio-caption-heading">Movement System</div>
                             </div>
                         </div>                        
-                    </div>                                    
+                    </div>
+                    -->
+                    <div class="col-lg-12">
+                        <div class="portfolio-item">
+                            <div class="col-lg-12">
+                                <p><span style="color: #f0f0f0;">Same thing here, gifs are the bane of my existence.</span></p>
+                            </div>
+                        </div>
+                    </div>                            
                 </div>
             </div>
         </section>
@@ -828,41 +846,6 @@
         </div>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-        <script async src="js/scripts.js" defer></script>
-        <script>
-            document.addEventListener("DOMContentLoaded", function() {
-                if (document.querySelectorAll(".portfolio-item").length > 0) {
-                    VanillaTilt.init(document.querySelectorAll(".portfolio-item"), {
-                        max: 10,
-                        speed: 2000,
-                        easing: "cubic-bezier(.03,.98,.52,.99)",
-                        glare: true,
-                        "max-glare": 0.1,
-                    });
-                }
-
-                const lightbox = document.getElementById("lightbox");
-                const lightboxImg = document.getElementById("lightbox-img");
-
-                if (lightbox && lightboxImg) {
-                    document.querySelectorAll(".portfolio-image").forEach(image => {
-                        image.addEventListener("click", function() {
-                            lightboxImg.src = this.src;
-                            lightbox.classList.add("active");
-                            lightbox.style.animation = "fadeInLightbox 0.3s ease-in-out";
-                        });
-                    });
-
-                    lightbox.addEventListener("click", function(e) {
-                        if (e.target !== lightboxImg) {
-                            lightbox.style.animation = "fadeOutLightbox 0.3s ease-in-out";
-                            setTimeout(() => {
-                                lightbox.classList.remove("active");
-                            }, 300);
-                        }
-                    });
-                }
-            });
-        </script>              
+        <script async src="js/scripts.js" defer></script>          
     </body>
 </html>
